2009-09-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/object.h,
	score/inline/rtems/score/object.inl,
	score/src/objectgetnameasstring.c, score/src/objectidtoname.c,
	score/src/objectinitializeinformation.c,
	score/src/objectnamespaceremove.c, score/src/objectnametoidstring.c,
	score/src/objectsetname.c, score/src/thread.c,
	score/src/threadcreateidle.c: Disable object string name support when
	POSIX is not enabled.

2009-09-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/capture/capture.c: Use public API to obtain object name.

2009-09-09	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* score/include/rtems/score/heap.h, score/inline/rtems/score/heap.inl,
	score/src/heapallocate.c, score/src/heap.c, score/src/heapextend.c,
	score/src/heapresizeblock.c, score/src/heapwalk.c: Documenation.
	Simplified block resize. Improved heap walk. Changed heap layout to
	avoid a special case for _Heap_Is_used() and _Heap_Is_free().
	* libmisc/stackchk/check.c: Update for heap API changes.

2009-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/issetugid.c: New (relocated from libnetworking).
	* libnetworking/rtems/issetugid.c: Remove.
	* libnetworking/Makefile.am: Reflect changes above.
	* libcsupport/Makefile.am: Reflect changes above.

2009-09-06	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* libcsupport/src/free.c, libmisc/stackchk/check.c,
	rtems/include/rtems/rtems/region.h, rtems/src/regioncreate.c,
	rtems/src/regionextend.c, rtems/src/regiongetinfo.c,
	rtems/src/regiongetsegment.c, rtems/src/regiongetsegmentsize.c,
	rtems/src/regionresizesegment.c, score/src/pheapallocate.c,
	score/src/pheapallocatealigned.c, score/src/pheapextend.c,
	score/src/pheapfree.c, score/src/pheapgetblocksize.c,
	score/src/pheapgetfreeinfo.c, score/src/pheapgetinfo.c,
	score/src/pheapgetsize.c, score/src/pheapinit.c,
	score/src/pheapresizeblock.c, score/src/pheapwalk.c:
	Update for heap API changes.