@@ -76,16 +76,20 @@ void _Thread_Tickle_timeslice( void )
       break;
 
     case THREAD_CPU_BUDGET_ALGORITHM_RESET_TIMESLICE:
-    case THREAD_CPU_BUDGET_ALGORITHM_EXHAUST_TIMESLICE:
+    #if defined(RTEMS_SCORE_THREAD_ENABLE_EXHAUST_TIMESLICE)
+      case THREAD_CPU_BUDGET_ALGORITHM_EXHAUST_TIMESLICE:
+    #endif
       if ( (int)(--executing->cpu_time_budget) <= 0 ) {
         _Thread_Reset_timeslice();
         executing->cpu_time_budget = _Thread_Ticks_per_timeslice;
       }
       break;
 
-    case THREAD_CPU_BUDGET_ALGORITHM_CALLOUT:
-      if ( --executing->cpu_time_budget == 0 )
-        (*executing->budget_callout)( executing );
-      break;
+    #if defined(RTEMS_SCORE_THREAD_ENABLE_SCHEDULER_CALLOUT)
+      case THREAD_CPU_BUDGET_ALGORITHM_CALLOUT:
+	if ( --executing->cpu_time_budget == 0 )
+	  (*executing->budget_callout)( executing );
+	break;
+    #endif
   }
 }
